add navbar and CarWashing component

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+body {
+  font-family: "Roboto", sans-serif;
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .transitions {
+    @apply transition-all ease-in duration-700;
+  }
+}
+
